fixes duplicated user profile upon joining room
focus on desktop for now. thinking of mobile ui is really slowing me
down. just do desktop for now and try to pack it in later. maybe I’ll
gain some momentum this way. lets go! (here’s hoping I don’t look back
at this commit with disappointment lol)

--- a/app/imports/ui/components/room/Sidebar/sidebar.scss
+++ b/app/imports/ui/components/room/Sidebar/sidebar.scss
@@ -187,8 +187,9 @@ $disconnect:  #e74c3c;
       }
 
       &.compact {
-        width: 100%;
-        transform: translate3d(0,0,0);
+        width: 340px; // do mobile later...
+        //width: 100%;
+        transform: translate3d(100%,0,0);
       }
       
       &.visible {
@@ -212,10 +213,11 @@ $disconnect:  #e74c3c;
       }
       
       .content{
+          margin-top: 5px;
           margin-left: 5px;
-          padding: 10px 8px;
-          height: calc(100% - 5px);
-          width: calc(100% - 5px);
+          height: calc(100% - 10px);
+          width: calc(100% - 10px);
+          padding: 10px;
           overflow-y: auto;
           background-color: $sidebar-content;
           color: $sidebar-content-text;
